--- a/manaLappuse.html
+++ b/manaLappuse.html
@@ -3,7 +3,7 @@
     <title>3. grupa</title>
   </head>
   <body>
-    <!--Skolotāji rakstās šeit!-->
+    Ludmila Abramova
     
   </body>
 </html>
